--- a/db/db/templates/index1.html
+++ b/db/db/templates/index1.html
@@ -1,3 +1,4 @@
+<!-- original code was taken form some github users and was enhanced from our team to show the backend and sql connections in more beautiful way -->
 <body>
     <section class="container">
         <div class="login-container">
@@ -5,7 +6,7 @@
             <div class="form-container">
                 <img src="https://raw.githubusercontent.com/hicodersofficial/glassmorphism-login-form/master/assets/illustration.png" alt="illustration" class="illustration" style="filter: blur(0px);" />
                 <h1>Login</h1>
-                <!-- Блок для сообщения об ошибке, если она есть -->
+
                 {% if error %}
                     <div class="error-message">
                         {{ error }}
@@ -22,7 +23,6 @@
                 </form>
                 <div class="register-forget opacity">
                     <a href="/register">REGISTER</a> <!-- Link to register page -->
-                    <a href="">FORGOT PASSWORD</a>
                 </div>
             </div>
             <div class="circle circle-two"></div>
