--- a/db/db/templates/register.html
+++ b/db/db/templates/register.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- this /view endpoint is used for register part -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style2.css"> <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="/static/style2.css"> <!--link to my css file -->
     <style>
         body , h2 , input , button{
             font-family: "Barlow", sans-serif;
@@ -15,18 +15,17 @@
 </head>
 
 <body>
-    <!-- Copy the same HTML structure from your home page -->
+
     <div class="about">
-        <!-- Your about section content -->
+
     </div>
 
     <div class="wrapper">
         <nav>
-            <!-- Your navigation menu -->
         </nav>
 
         <div class="content">
-            <!-- Your registration form -->
+
             <section class="container">
                 <div class="login-container">
                     <div class="circle circle-one"></div>
