--- a/db/db/templates/view.html
+++ b/db/db/templates/view.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>View all users</title>
-    <!-- Используйте url_for() для генерации URL к файлу стилей -->
-    <link rel="stylesheet" href="/static/forview.css"> <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="/static/forview.css"> <!-- link to the CSS file -->
 </head>
 <body>
     <h1>All Users : </h1>
