--- a/db/db/templates/index.html
+++ b/db/db/templates/index.html
@@ -1,3 +1,5 @@
+<!-- original code was taken form some github users and was enhanced from our team to show the backend and sql connections in more beautiful way -->
+
 <!DOCTYPE html>
 <html lang="en">
 
