--- a/db/db/static/style.css
+++ b/db/db/static/style.css
@@ -1,3 +1,4 @@
+/*this css code is taken from Ravael Avlucas and was enhanced by us */
 @import url("https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css");
 @import url("https://fonts.googleapis.com/css?family=Barlow+Condensed:200,300,400,500,600,700,800,900|Barlow:200,300,400,500,600,700,800,900&display=swap");
